For more detailed instructions on filling in the ChangeLog form, see 
`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

******************************************************************************
post-release patch

2001-11-12  Kevin Layer  <layer@crikey>

	* fi-basic-lep.el: bug10572: killing buffer can sometimes lead to
	an error in emacs.  It's a timing thing that only happens on some
	emacs and operating system combos.
	* fi-compile.el: make sure fi-xemacs.el is byte compiled!

2001-11-01  Kevin Layer  <layer@crikey>

    from mikel for spr24742
	* fi-xemacs.el: don't contact lisp over and over again, cache the
	value used for the first menu item, and uncache it on the last. 

******************************************************************************
2.2.6

2001-09-18  Kevin Layer  <layer@crikey>

	* emacsdir.pl,
	* Makefile: use /cygdrive/x instead of //x, since the latter
	doesn't work in the newest cygwin

******************************************************************************
2.2.5

2001-09-10  Kevin Layer  <layer@crikey>

    from smh:
	* fi-modes.el (fi::find-tag-common-lisp): raise the intelligence
	of the default tag in find-tag by removing explicit package
	qualifiers.

******************************************************************************
2.2.4

2001-08-23  Kevin Layer  <layer@crikey>

	* fi-lep.el: updated fi:goto-char doc string

*******************************************************************************
2.2.3

2001-06-20  Kevin Layer  <layer@crikey>

    from cox:
	* fi-basic-lep.el: spr24414: fix to fix for bug10686 (see below)

*******************************************************************************
2.2.2

2001-06-13  Kevin Layer  <layer@crikey>

	* fi-lep.el: added fi:goto-char
